--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.7.2
   http: ^1.6.0
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
