--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   get: ^4.7.2
   http: ^1.6.0
   google_fonts: ^6.3.2
+  cherry_toast: ^1.13.0
 
 dev_dependencies:
   flutter_test:
