--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cherry_toast: ^1.13.0
   dio: ^5.9.0
   get_it: ^9.0.5
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
